--- a/reactlist/list2-4.html
+++ b/reactlist/list2-4.html
@@ -10,31 +10,34 @@
 <body>
   <h1>React</h1>
   <div id="root">wait...</div>
-  <script>
-  let dom = document.querySelector('#root');
-  let element = React.createElement(
-      'div', {}, [
-          React.createElement(
-              'h2', {}, "Hello!"
-          ),
-          React.createElement(
-              'h3', {}, "React sample page."
-          ),
-          React.createElement(
-              'ul', {}, [
-                  React.createElement(
-                      'li', {}, "First item."
-                  ),
-                  React.createElement(
-                      'li', {}, "Second item."
-                  ),
-                  React.createElement(
-                      'li', {}, "Third item."
-                  ),
-              ]
-          ),
-      ]);
-ReactDOM.render(element, dom);
-</script>
+
+  <script type="text/babel">
+  let dom = document.querySelector('#root')
+  let el = (
+    <div>
+        <h2>JSX Sample</h2>
+        <p>This is sample message.</p>
+    </div>
+    );
+    ReactDOM.render(el, dom);
+
+  // let dom = document.querySelector('#root')
+  // let el = (
+  //   <div>
+  //     <h2>JSX Sample</h2>
+  //     <p>This is sample message.</p>
+  //   </div>
+  // );
+  // ReactDOM.render(el, dom);
+// let dom = document.querySelector('#root');
+
+  // let el = (
+  //   <div>
+  //     <h2>JSX sample</h2>
+  //     <p>This is sample message.</p>
+  //   </div>
+  // );
+  // ReactDOM.render(el,  dom);
+  </script>
 </body>
 </html>
